// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`decode duplicated 1`] = `
{
  "ar": [
    "one",
    "three",
  ],
  "brr": "3",
  "str": "3",
  "zr": [
    "deedee",
    "123",
  ],
}
`;

exports[`decode foo - bracketedArray 1`] = `
{
  " xa  n          p ": ""
yoyoyo

",
  "[disturbing]": "hey you never know",
  "a": {
    "[]": "a square?",
    "av": "a val",
    "b": {
      "c": {
        "e": [
          "1",
        ],
        "j": [
          "2",
        ],
      },
    },
    "cr": [
      "eight",
    ],
    "cr[]": "four",
    "e": "{ o: p, a: { av: a val, b: { c: { e: "this [value]" } } } }",
    "j": ""{ o: "p", a: { av: "a val", b: { c: { e: "this [value]" } } } }"",
  },
  "a with spaces": "b  c",
  "ar": [
    "three",
    "this is included",
  ],
  "ar[]": "one",
  "b": {},
  "br": [
    "cold",
    "warm",
  ],
  "eq": "eq=eq",
  "false": false,
  "null": null,
  "o": "p",
  "s": "something",
  "s1": ""something'",
  "s2": "something else",
  "s3": "",
  "s4": "",
  "s5": "   ",
  "s6": " a ",
  "s7": true,
  "true": true,
  "undefined": "undefined",
  "x.y.z": {
    "a.b.c": {
      "a.b.c": "abc",
      "noHashComment": "this# this is not a comment",
      "nocomment": "this; this is not a comment",
    },
    "x.y.z": "xyz",
  },
  "zr[]": "deedee",
}
`;

exports[`decode foo 1`] = `
{
  " xa  n          p ": ""
yoyoyo

",
  "[disturbing]": "hey you never know",
  "a": {
    "[]": "a square?",
    "av": "a val",
    "b": {
      "c": {
        "e": "1",
        "j": "2",
      },
    },
    "cr": [
      "four",
      "eight",
    ],
    "e": "{ o: p, a: { av: a val, b: { c: { e: "this [value]" } } } }",
    "j": ""{ o: "p", a: { av: "a val", b: { c: { e: "this [value]" } } } }"",
  },
  "a with spaces": "b  c",
  "ar": [
    "one",
    "three",
    "this is included",
  ],
  "b": {},
  "br": "warm",
  "eq": "eq=eq",
  "false": false,
  "null": null,
  "o": "p",
  "s": "something",
  "s1": ""something'",
  "s2": "something else",
  "s3": "",
  "s4": "",
  "s5": "   ",
  "s6": " a ",
  "s7": true,
  "true": true,
  "undefined": "undefined",
  "x.y.z": {
    "a.b.c": {
      "a.b.c": "abc",
      "noHashComment": "this# this is not a comment",
      "nocomment": "this; this is not a comment",
    },
    "x.y.z": "xyz",
  },
  "zr": [
    "deedee",
  ],
}
`;
